# augmego-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/web/: .env.example  Dockerfile  instrumentation.ts  package-lock.json  package.json  server.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/v1/auth/[provider]/: route.ts
apps/web/app/api/v1/auth/callback/[provider]/: route.ts
apps/web/app/api/v1/auth/logout/: route.ts
apps/web/app/api/v1/auth/me/: route.ts
apps/web/app/api/v1/auth/player-avatar/: route.ts
apps/web/app/api/v1/auth/player-avatar/upload/: route.ts
apps/web/app/api/v1/auth/player-avatar/upload-url/: route.ts
apps/web/app/api/v1/auth/profile/: route.ts
apps/web/app/api/v1/internal/pets/[petId]/capture/: route.ts
apps/web/app/api/v1/internal/pets/reserve/: route.ts
apps/web/app/api/v1/internal/pets/reset-spawned/: route.ts
apps/web/app/api/v1/internal/users/[userId]/pets/: route.ts
apps/web/app/api/v1/pets/[petId]/file/: route.ts
apps/web/app/api/v1/users/[userId]/player-avatar/[slot]/file/: route.ts
apps/web/app/learn/: page.tsx
apps/web/app/play/: page.tsx
apps/web/old-references/: index.text
apps/web/src/: auth.ts
apps/web/src/components/play/: PlayClient.tsx
apps/web/src/game/client/: engine.ts
apps/web/src/game/shared/: content.ts  math.test.ts  math.ts  protocol.ts  world.test.ts  world.ts
apps/web/src/lib/: auth-compat.ts  auth-user.ts  avatar.ts  env.ts  game-auth.ts  internal-api.ts  pets.ts  prisma.ts  storage.ts
apps/web/src/server/game/: runtime.ts
apps/web/src/types/: next-auth.d.ts
assets/textures/: coal_ore_16x16.txt  crate_16x16.txt  glass_16x16.txt  lantern_16x16.txt  leaf_canopy_16x16.txt  mottle_dense_16x16.txt  mottle_soft_16x16.txt  planks_16x16.txt  sandstone_16x16.txt  water_16x16.txt  wood_bark_16x16.txt
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_initial.sql  0002_pet_ready_lookup_idx.sql  0003_world_chunk_overrides.sql  0004_pet_party_active.sql  0005_weapon_registry.sql  0006_pet_equipped_weapon.sql  0007_player_avatar_generation_tasks.sql  0008_player_block_inventory_slots.sql  0009_avatar_customizer_premium.sql
backend/src/: account.rs  auth.rs  avatar_generation.rs  block_inventory.rs  db.rs  generated_asset.rs  lib.rs  main.rs  net.rs  persistence.rs  pet_registry.rs  server.rs  storage.rs  weapon_registry.rs
backend/static/landing/: app.js  scene.js
backend/static/play/: game-web-cb68f95ec31870f5.js  index.html  mesh-worker.js
bun-backend/: .dockerignore  .env.example  Dockerfile  package.json  start.sh
bun-backend/prisma/: schema.prisma
bun-backend/prisma/migrations/20260216123000_add_party_manager_role/: migration.sql
bun-backend/prisma/migrations/20260218103000_add_party_public_flag/: migration.sql
bun-backend/prisma/migrations/20260218112000_add_world_profile_fields/: migration.sql
bun-backend/prisma/migrations/20260221110000_add_world_asset_visibility/: migration.sql
bun-backend/prisma/migrations/20260222130000_add_world_posts/: migration.sql
bun-backend/prisma/migrations/20260222170000_add_world_photo_walls/: migration.sql
bun-backend/prisma/migrations/20260225120000_add_humanoid_world_asset_generation/: migration.sql
bun-backend/prisma/migrations/20260227110000_add_world_asset_image_generation_source/: migration.sql
bun-backend/prisma/migrations/20260228113000_add_world_portal_location/: migration.sql
bun-backend/prisma/migrations/20260228170000_add_user_player_avatar_selection/: migration.sql
bun-backend/src/: index.ts
bun-backend/src/lib/: cookies.ts  session.ts
bun-backend/src/realtime/: ws.ts
dev-proxy/: README.md  nginx.conf
dev-proxy/certs/: dev.augmego.ca-key.pem  dev.augmego.ca.pem
game/: Cargo.toml
game-web/: Cargo.toml  Dockerfile  Trunk.toml  index.html  mesh-worker.js  mesh-worker.test.js  nginx.conf
game-web/src/: lib.rs
game.deprecated/: Cargo.toml
game.deprecated/src/: main.rs
game/src/: main.rs
ngrok/: ngrok.dev.yml  ngrok.yml
prisma/: schema.prisma
prisma/migrations/20260205005218_init/: migration.sql
prisma/migrations/20260208194517_add_auth/: migration.sql
prisma/migrations/20260209120000_add_google_auth/: migration.sql
prisma/migrations/20260216110000_add_parties/: migration.sql
prisma/migrations/20260216150000_add_world_assets/: migration.sql
prisma/migrations/20260218183000_add_world_asset_generation_tasks/: migration.sql
prisma/migrations/20260222143000_add_world_post_images_and_comments/: migration.sql
prisma/migrations/20260226012000_add_meshy_rigging_task_id/: migration.sql
prisma/migrations/20260227123000_add_world_asset_generation_enhanced_graphics/: migration.sql
prisma/migrations/20260308120000_add_fictional_world_home/: migration.sql
prisma/migrations/20260309120000_add_world_timeline_frames/: migration.sql
prisma/migrations/20260310121500_add_world_cameras/: migration.sql
prisma/migrations/20260314153000_add_world_timeline_export_tasks/: migration.sql
prisma/migrations/20260402101500_add_pets/: migration.sql
scripts/: dev-check.sh  dev-up.sh
shared_content/: Cargo.toml
shared_content/src/: lib.rs
shared_math/: Cargo.toml
shared_math/src/: lib.rs
shared_protocol/: Cargo.toml
shared_protocol/src/: lib.rs
shared_world/: Cargo.toml
shared_world/src/: lib.rs
wgpu-lite/: Cargo.toml
wgpu-lite/src/: lib.rs  modeled_shader.wgsl  shader.wgsl
