[workspace]
members = [
    "backend",
    "game",
    "shared_content",
    "shared_math",
    "shared_protocol",
    "shared_world",
    "wgpu-lite",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Travis Miller"]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
bytemuck = { version = "1.19", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
winit = "0.29"
wgpu = "0.20"
