[workspace]
members = [
    "backend",
    "game-web",
    "shared_content",
    "shared_math",
    "shared_protocol",
    "shared_world",
    "wgpu-lite",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Travis Miller"]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
bytemuck = { version = "1.19", features = ["derive"] }
glam = "0.29"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
winit = "0.29"
wgpu = { version = "0.20", features = ["webgl"] }

[workspace.dependencies.web-sys]
version = "0.3"
features = ["BinaryType", "CanvasRenderingContext2d", "CloseEvent", "Document", "Element", "ErrorEvent", "Event", "EventTarget", "File", "FileList", "FormData", "Headers", "HtmlCanvasElement", "HtmlInputElement", "HtmlMediaElement", "HtmlVideoElement", "ImageData", "Location", "MediaDevices", "MediaStream", "MediaStreamConstraints", "MediaStreamTrack", "MessageEvent", "Navigator", "Request", "RequestCredentials", "RequestInit", "RequestMode", "Response", "RtcDataChannel", "RtcDataChannelEvent", "RtcIceCandidate", "RtcIceCandidateInit", "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcSdpType", "RtcSessionDescriptionInit", "RtcTrackEvent", "WebSocket", "Window", "Worker"]

[workspace.dependencies.wasm-bindgen]
version = "0.2"

[workspace.dependencies.wasm-bindgen-futures]
version = "0.4"

[workspace.dependencies.js-sys]
version = "0.3"

[workspace.dependencies.web-time]
version = "1.1"
