[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["multipart", "ws"] }
bincode.workspace = true
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"
glam.workspace = true
http = "1.3"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json = "1.0"
sha2 = "0.10"
shared_content = { path = "../shared_content" }
shared_math = { path = "../shared_math" }
shared_protocol = { path = "../shared_protocol" }
shared_world = { path = "../shared_world" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio.workspace = true
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
