[package]
name = "game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bytemuck.workspace = true
glam.workspace = true
pollster.workspace = true
shared_content = { path = "../shared_content" }
shared_math = { path = "../shared_math" }
shared_protocol = { path = "../shared_protocol" }
shared_world = { path = "../shared_world" }
wgpu-lite = { path = "../wgpu-lite" }
winit.workspace = true

