[package]
name = "shared_protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
shared_math = { path = "../shared_math" }
shared_world = { path = "../shared_world" }
thiserror.workspace = true

